# one-two-pay-api

./: Cargo.toml  rust-toolchain.toml  shell.nix
cli/: Cargo.toml  test_inquery.sh  test_transfer.sh
cli/src/: main.rs
nix/: pkgs.nix
src/: bank.rs  error.rs  lib.rs  query.rs  transfer.rs
