[package]
name = "one-two-pay-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
