[package]
name = "one-two-pay-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tokio = { version = "1.32.0", features = ["full"] }
one-two-pay-api = { path = "../library" }
clap = { version = "4.4.3", features = ["derive"] }
